src/renderer/components/mod-card/ModCard.css
.mod-card-container {
	padding: 0.7rem;
	border: 1px solid var(--border);
	border-radius: 0.5rem;
	width: 250px;
	height: 150px;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
}

.delete-button {
	padding: 0.5rem;
	background-color: var(--foreground);
	color: var(--background);
	border-radius: 0.3rem;
	text-align: center;
	display: flex;
	justify-content: center;
	align-items: center;
	font-size: small;
}

.mod-card-name {
	display: flex;

	max-width: 70%;
	min-width: 70%;

	overflow-x: scroll;
	overflow-y: visible;
}

.delete-button:hover {
	background-color: #db6060;
	box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
}

.mod-card-header {
	display: flex;
	justify-content: space-between;
	align-items: center;
	overflow: ellipsis;
}

.mod-card-footer {
	display: flex;
	justify-content: space-between;
	align-items: end;
	font-size: x-small;
}

.mod-card-type {
	font-size: small;
	display: flex;
	justify-content: flex-end;
	width: 100%;
	height: 100%;
	margin-left: 0.5rem;
	min-width: 1.5rem;
}

